Fix z-index opf logo when drop down is active

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -80,6 +80,9 @@
 .nav-icon {
   width: 80px;
   margin: 16px;
+}
+
+.nav-link-icon, .nav-icon {
   z-index: 4;
 }
 
@@ -103,7 +106,7 @@
 
 .nav-title {
   text-align: left;
-  margin-left: 16px;
+  /* margin-left: 16px; */
 }
 
 .nav-links {
